[gd_scene format=3 uid="uid://c6j6ptelx5isj"]

[ext_resource type="Texture2D" uid="uid://dphvpm5sloof7" path="res://assets/textures/sprites/others/save_point.png" id="1_4p01t"]
[ext_resource type="Script" uid="uid://dsstc8j1l86xw" path="res://entities/objects/save point/save_point.gd" id="1_b8oqj"]
[ext_resource type="PackedScene" uid="uid://r7dvt8vpcyk4" path="res://components/interactive component/interactive_component.tscn" id="3_b8oqj"]

[sub_resource type="Gradient" id="Gradient_867kr"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b8oqj"]
gradient = SubResource("Gradient_867kr")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a806s"]
size = Vector2(90, 90)

[sub_resource type="Animation" id="Animation_j2vqo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_on2sb"]
resource_name = "pop_up"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a806s"]
resource_name = "pop_out"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hv7mb"]
_data = {
&"RESET": SubResource("Animation_j2vqo"),
&"appear": SubResource("Animation_on2sb"),
&"disappear": SubResource("Animation_a806s")
}

[sub_resource type="Animation" id="Animation_b8oqj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 25)]
}

[sub_resource type="Animation" id="Animation_867kr"]
resource_name = "notify"
length = 2.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 2, 2.5),
"transitions": PackedFloat32Array(0.5, 2, 1, -2, 1),
"update": 0,
"values": [Vector2(21, 25), Vector2(21, -7), Vector2(21, -5), Vector2(21, -5), Vector2(21, 25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8oqj"]
_data = {
&"RESET": SubResource("Animation_b8oqj"),
&"notify": SubResource("Animation_867kr")
}

[node name="SavePoint" type="Node2D" unique_id=1027316960]
script = ExtResource("1_b8oqj")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=546711645]
texture = ExtResource("1_4p01t")

[node name="PointLight2D" type="PointLight2D" parent="." unique_id=883062459]
color = Color(1, 0.4906125, 0.98565835, 1)
energy = 2.0
texture = SubResource("GradientTexture2D_b8oqj")

[node name="InteractiveComponent" parent="." unique_id=548170075 instance=ExtResource("3_b8oqj")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveComponent" unique_id=1672519823]
shape = SubResource("RectangleShape2D_a806s")

[node name="InputHint" type="Control" parent="." unique_id=18360693]
layout_mode = 3
anchors_preset = 0
offset_left = -106.0
offset_top = -45.0
offset_right = 106.0
offset_bottom = -17.0

[node name="Label" type="Label" parent="InputHint" unique_id=704140535]
modulate = Color(1, 1, 1, 0)
texture_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -15.0
offset_right = 106.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "GAME_LABEL_SAVE_GAME"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="InputHint" unique_id=451153199]
libraries/ = SubResource("AnimationLibrary_hv7mb")

[node name="GameSavedLabel" type="Control" parent="." unique_id=381002056]
layout_mode = 3
anchors_preset = 0
offset_left = -164.0
offset_top = -65.0
offset_right = 164.0
offset_bottom = -28.0

[node name="Label" type="Label" parent="GameSavedLabel" unique_id=1403268651]
modulate = Color(1, 1, 1, 0)
texture_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = 6.5
offset_right = 122.0
offset_bottom = 33.583344
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "GAME_LABEL_GAME_SAVED"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameSavedLabel" unique_id=2014476718]
libraries/ = SubResource("AnimationLibrary_b8oqj")
